--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.24.0",
     "vite": "^6.0.3"
   }
 }
